se corrige identacion

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--Articulos-venta-->      
         <div class="content1">
             <div class="content1_cards">
-                    <img src="./assets/img/images.jfif" alt="Perfume"7>
+                <img src="./assets/img/images.jfif" alt="Perfume"/>
                 <div class="Descripcion">
                     <h3>Al Haramain Omry Due 24m</h3>
                 <div class="Valor"><p>$39.990</p></div>
@@ -39,7 +39,7 @@
 
         <div class="content2">
             <div class="content2_cards">
-                    <img src="./assets/img/zapatos-r-polanski-1210-magnolia-zamsz.jpg" alt="Zapatos"/>
+                <img src="./assets/img/zapatos-r-polanski-1210-magnolia-zamsz.jpg" alt="Zapatos"/>
                 <div class="Descripcion">
                     <h3>Zapatos Vocë</h3>
                 <div class="Valor"><p>$64.990</p></div>
@@ -50,7 +50,7 @@
 
         <div class="content3">
             <div class="content3_cards">
-                    <img src="./assets/img/thumb_256.jpg" alt="Cartera"/>
+                <img src="./assets/img/thumb_256.jpg" alt="Cartera"/>
                 <div class="Descripcion">
                     <h3>Tuscany Leather</h3>
                 <div class="Valor"><p>$150.000</p></div>
@@ -61,7 +61,7 @@
 
         <div class="content4">
             <div class="content4_cards">
-                    <img src="./assets/img/bGt92dlX_400x400.jpg" alt="Vestido"/>
+                <img src="./assets/img/bGt92dlX_400x400.jpg" alt="Vestido"/>
                 <div class="Descripcion">
                     <h3>Vestido Novia Pnina Tornei</h3>
                 <div class="Valor"><p>$1.690.000</p></div>
