--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="header">
             <ul>
                 <h1>Categorias</h1>
-                <li>Perfumes(13)</li>
-                <li>Ropas(21)</li>
-                <li>Accesorios(41)</li>
-                <li>zapatos(10)</li>
+                <li>Perfumes<span>(13)</span></li>
+                <li>Ropas<span>(21)</span></li>
+                <li>Accesorios<span>(41)</span></li>
+                <li>zapatos<span>(10)</span></li>
             </ul>
         </div>
 <!--Articulos-venta-->      
