--- a/ecommerce.html
+++ b/ecommerce.html
@@ -11,5 +11,7 @@
     <img src="./assets/img/bGt92dlX_400x400.jpg" alt="Vestido Novia"/>
     <img src="./assets/img/zapatos-r-polanski-1210-magnolia-zamsz.jpg" alt="Zapatos"/>
     <img src="./assets/img/thumb_256.jpg" alt="Cartera"/>
+    <img src="./assets/img/parrot_spin.jpg" alt="vestido niña"/>
+    <img src="./assets/img/promo-categories.jpg" alt="lentes de sol">
 </body>
 </html>
